crates/pardosa/tests/ui/no_external_backend_sink_impl.stderr
error[E0277]: the trait bound `ForeignSink: pardosa::backend::sealed::Sealed` is not satisfied
 --> tests/ui/no_external_backend_sink_impl.rs:3:22
  |
3 | impl BackendSink for ForeignSink {
  |                      ^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `pardosa::backend::sealed::Sealed` is not implemented for `ForeignSink`
 --> tests/ui/no_external_backend_sink_impl.rs:2:1
  |
2 | struct ForeignSink;
  | ^^^^^^^^^^^^^^^^^^
help: the trait `pardosa::backend::sealed::Sealed` is implemented for `PgnoFileSink<W>`
 --> src/backend/mod.rs
  |
  | impl<W> sealed::Sealed for PgnoFileSink<W> where W: pardosa_file::Syncable + Seek {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `BackendSink`
 --> src/backend/mod.rs
  |
  | pub trait BackendSink: sealed::Sealed {
  |                        ^^^^^^^^^^^^^^ required by this bound in `BackendSink`
  = note: `BackendSink` is a "sealed trait", because to implement it you also need to implement `pardosa::backend::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following types implement the trait:
            pardosa::store::PgnoFileSink<W>
            pardosa::authoritative::jetstream::JetStreamBackendAdapter
